--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       <div style="position: relative; ">
         <span class="span_currency">R$</span>
         <input maxlength="10" minlength="3" type="text" name="creditos" id="valor" onkeyup="formatCurrency(this)" >
+        <input type="text" name="id" id="id" style="display:none" >
       </div>
      
     </article>
