--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <form action="/charge" method="post" style="margin: 0;">
     <article>
       <label>Insira a quantidade de créditos para comprar:</label>
-      <div style="position: relative; ">
+      <div style="position: relative; width: 100%; display: flex;">
         <span class="span_currency">R$</span>
         <input maxlength="10" minlength="3" type="text" name="creditos" id="valor" onkeyup="formatCurrency(this)" >
         <input type="text" name="id" id="id" style="display:none" >
