--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>
-  <img style="margin-bottom: 100px;" src="https://brunofortunato.com.br/image/logo-app.png" width="400px" height="400px" alt="Logo Pagbus">
+  <img style="margin-bottom: 100px;" src="https://brunofortunato.com.br/image/logo-app.png" width="300px" alt="Logo Pagbus">
   <div style="display: flex; width: 100%;  justify-content: center;">
     {% block content %}{% endblock %}
   </div>
